--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/MainLayout.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
         <main>
             <NavLayout />
 
-            <article class="content px-4">
+            <article class="content">
                 @Body
             </article>
         </main>
