--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+
+.hero-section {
+    background-color: var(--pl-purple);
+}
+
 h1:focus {
     outline: none;
 }
@@ -44,7 +50,7 @@ h1:focus {
 }
 
 html, body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     background-color: var(--content-bg);
 }
 
@@ -87,10 +93,6 @@ main {
         .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
             color: #212529;
         }
-
-.content {
-    padding-top: 1.1rem;
-}
 
 .navbar-brand {
     font-size: 1.2rem;
