My Details Page Completed

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Login.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Login.razor
@@ -1,4 +1,5 @@
 ﻿@page "/login"
+@using PredictionLeague.Shared.Auth
 
 @inject IAuthService AuthService
 @inject NavigationManager NavigationManager
