--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Register.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Register.razor
@@ -1,7 +1,6 @@
 ﻿@page "/register"
 
-@using PredictionLeague.Web.Client.Authentication
-@using PredictionLeague.Web.Client.Contracts.Auth
+@using PredictionLeague.Shared.Auth
 @inject IAuthService AuthService
 @inject NavigationManager NavigationManager
 
