--- a/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
@@ -7,4 +7,4 @@
 @using Microsoft.JSInterop
 @using PredictionLeague.Web.Client
 @using PredictionLeague.Web.Client.Authentication
-@using PredictionLeague.Web.Client.Contracts.Auth
+@using PredictionLeague.Shared.Auth
