--- a/PredictionLeague.Mobile/Platforms/Windows/App.xaml
+++ b/PredictionLeague.Mobile/Platforms/Windows/App.xaml
@@ -1,8 +1,7 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="PredictionLeague.Mobile.WinUI.App"
+    x:Class="PredictionLeague.Mobile.Platforms.Windows.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:PredictionLeague.Mobile.WinUI">
+    xmlns:maui="using:Microsoft.Maui">
 
 </maui:MauiWinUIApplication>
