All Pages Styled Consistently

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/MyDetails.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/MyDetails.razor
@@ -78,7 +78,6 @@
 <style>
     .my-details-container {
         background-color: var(--pl-purple);
-        /* 56px is a common height for a navbar */
         min-height: calc(100vh - 56px);
         display: flex;
         justify-content: center;
@@ -87,8 +86,8 @@
     }
 
     .form-container {
-        background-color: var(--pl-purple-dark);
-        padding: 2.5rem;
+         background-color: var(--pl-light-purple);
+       padding: 2.5rem;
         border-radius: 8px;
         width: 100%;
         max-width: 500px; /* Max-width is better for responsiveness */
