--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -42,6 +42,7 @@ h1:focus {
 :root {
     --pl-purple: #3D195B;
     --pl-purple-dark: #31144a;
+    --pl-light-purple: #4A2E6C;
     --pl-pink: #E90052;
     --pl-cyan: #04F5FF;
     --pl-green: #00FF85;
